--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# JWT
-jwt.secret=mySecretKeyForJWTTokenGenerationThatIsAtLeast256BitsLong
-jwt.expiration=86400000
+# JWT Configuration
+jwt.secret=your-secret-key-here-make-it-at-least-256-bits-long-for-HS256
+jwt.access-token-expiration=3600000
+jwt.refresh-token-expiration=604800000
