--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,39 @@
-spring.application.name=ezauth
-server.port=8080
+# Application
+spring.application.name=${APP_NAME:ezauth}
+server.port=${PORT:8080}
 
-# MySQL datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/ezauth?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgresSQL datasource
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
 
-# JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=${JPA_DDL:none}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.database-platform=${JPA_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA:public}
 
-# JWT Configuration
-jwt.secret=your-secret-key-here-make-it-at-least-256-bits-long-for-HS256
-jwt.access-token-expiration=3600000
-jwt.refresh-token-expiration=604800000
+# Flyway
+spring.flyway.enabled=${FLYWAY_ENABLED:true}
+spring.flyway.baseline-on-migrate=${FLYWAY_BASELINE:true}
+spring.flyway.locations=${FLYWAY_LOCATIONS:classpath:db/migration}
+spring.flyway.baseline-version=${FLYWAY_BASELINE_VERSION:0}
+spring.flyway.validate-on-migrate=${FLYWAY_VALIDATE:true}
+spring.flyway.clean-disabled=${FLYWAY_CLEAN_DISABLED:true}
+
+# JWT
+jwt.secret=${JWT_SECRET}
+jwt.access-token-expiration=${JWT_ACCESS_EXP:3600000}
+jwt.refresh-token-expiration=${JWT_REFRESH_EXP:604800000}
+
+# HikariCP
+spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT:600000}
+spring.datasource.hikari.max-lifetime=${HIKARI_MAX_LIFETIME:1800000}
+spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:5}
+spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL:10}
+spring.datasource.hikari.connection-test-query=${HIKARI_TEST_QUERY:SELECT 1}
+
+# Logging
+logging.level.org.flywaydb=${LOG_FLYWAY:DEBUG}
+logging.level.org.springframework.jdbc=${LOG_JDBC:DEBUG}
