feat: added SSO OAuth google login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.datasource.hikari.connection-test-query=${HIKARI_TEST_QUERY:SELECT 1}
 # Logging
 logging.level.org.flywaydb=${LOG_FLYWAY:DEBUG}
 logging.level.org.springframework.jdbc=${LOG_JDBC:DEBUG}
+
+#google SSO / OAuth
+google.client.id={GOOGLE_CID}
