--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,4 @@ logging.level.org.flywaydb=${LOG_FLYWAY:DEBUG}
 logging.level.org.springframework.jdbc=${LOG_JDBC:DEBUG}
 
 #google SSO / OAuth
-google.client.id={GOOGLE_CID}
+google.client.id=${GOOGLE_CID}
