--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,16 @@ logging.level.org.springframework.jdbc=${LOG_JDBC:DEBUG}
 
 #google SSO / OAuth
 google.client.id=${GOOGLE_CID}
+
+# Cache
+spring.cache.type=${CACHE_TYPE}
+spring.cache.caffeine.spec=${CACHE_CAFFEINE_SPEC}
+
+# Mail
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS}
+spring.mail.test-connection=${MAIL_TEST_CONNECTION}
