feat: added actuator for this service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,6 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS}
 spring.mail.test-connection=${MAIL_TEST_CONNECTION}
+
+#actuator
+management.endpoints.web.exposure.include=${ACTUATOR_TYPES}
