--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,4 @@ spring.mail.test-connection=${MAIL_TEST_CONNECTION}
 
 #actuator
 management.endpoints.web.exposure.include=${ACTUATOR_TYPES}
+management.health.mail.enabled=${ACTUATOR_MAIL_ENABLE}
